# rust-payment-processor

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
actual_output/: actual_chargeback_deposit_dispute_output.csv
expected_output/: expected_chargeback_after_withdrawal.csv  expected_dispute_deposit_output.csv  expected_loss_of_precision_output.csv  expected_resolve_deposit_dispute_output.csv
sample-input/: chargeback.csv  chargeback_after_withdrawal.csv  chargeback_deposit_dispute.csv  dispute_deposit.csv  loss_of_precision.csv  reordered_columns.csv  resolve.csv  resolve_deposit_dispute.csv  transactions.csv
src/: account.rs  bank.rs  errors.rs  main.rs  transaction.rs
