[package]
name = "rust-payment-processor"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
csv = "1.1.6"
rust_decimal = "1.14.1"
rust_decimal_macros = "1.14.1"
structopt = "0.3.21"